fix: layout shift

--- a/src/common/components/StationItem/styles.module.scss
+++ b/src/common/components/StationItem/styles.module.scss
@@ -49,13 +49,22 @@
   }
 
   .image_container {
+    width: 110px;
+    height: 110px;
+    flex-shrink: 0;
+
+    @include mixinHelper.onTablet {
+      width: 70px;
+      height: 70px;
+    }
+
     img {
+      width: 100%;
+      height: 100%;
       border-radius: 21px;
       object-fit: cover;
 
       @include mixinHelper.onTablet {
-        height: 70px;
-        width: 70px;
         border-radius: 10px;
       }
     }
